--- a/zabbix/.env_db_mysql
+++ b/zabbix/.env_db_mysql
@@ -4,7 +4,7 @@ MYSQL_USER=zabbix
 # MYSQL_USER_FILE=/run/secrets/MYSQL_USER
 MYSQL_PASSWORD=zabbix
 # MYSQL_PASSWORD_FILE=/run/secrets/MYSQL_PASSWORD
-MYSQL_ROOT_PASSWORD=zabbix123456
+MYSQL_ROOT_PASSWORD=zabbix@123456@zabbix
 # MYSQL_ROOT_PASSWORD_FILE=/run/secrets/MYSQL_ROOT_PASSWORD
 # MYSQL_ALLOW_EMPTY_PASSWORD=false
 # MYSQL_DATABASE=zabbix
