--- a/keepalived+nginx/Dockerfile
+++ b/keepalived+nginx/Dockerfile
@@ -2,7 +2,7 @@ FROM nginx:1.18.0-alpine
 
 RUN apk update && apk upgrade
 
-RUN apk add --no-cache bash curl ipvsadm iproute2 openrc keepalived && 
+RUN apk add --no-cache bash curl ipvsadm iproute2 openrc keepalived && \
     rm -f /var/cache/apk/* /tmp/*
 
 COPY entrypoint.sh /entrypoint.sh
