--- a/keepalived+nginx/nginx-slave/keepalived-slave.conf
+++ b/keepalived+nginx/nginx-slave/keepalived-slave.conf
@@ -7,7 +7,7 @@ vrrp_instance VI_1 {
     state BACKUP
     interface eth0
     virtual_router_id 33
-    priority 100
+    priority 99
     advert_int 1
     unicast_src_ip 172.20.128.3
     unicast_peer {
@@ -16,7 +16,7 @@ vrrp_instance VI_1 {
     
     authentication {
         auth_type PASS
-        auth_pass letmein
+        auth_pass huangt123456
     }
     
     virtual_ipaddress {
