--- a/keepalived+nginx/nginx-master/keepalived-master.conf
+++ b/keepalived+nginx/nginx-master/keepalived-master.conf
@@ -16,7 +16,7 @@ vrrp_instance VI_1 {
     
     authentication {
         auth_type PASS
-        auth_pass letmein
+        auth_pass huangt123456
     }
     
     virtual_ipaddress {
