--- a/keepalived+nginx/nginx-master/keepalived-master.conf
+++ b/keepalived+nginx/nginx-master/keepalived-master.conf
@@ -9,18 +9,18 @@ vrrp_instance VI_1 {
     virtual_router_id 33
     priority 200
     advert_int 1
-    unicast_src_ip 172.20.128.2
+    unicast_src_ip 172.30.128.2
     unicast_peer {
-        172.20.128.3
+        172.30.128.3
     }
     
     authentication {
         auth_type PASS
-        auth_pass huangt123456
+        auth_pass letmein
     }
     
     virtual_ipaddress {
-        172.20.128.4/24 dev eth0
+        172.30.128.4/24 dev eth0
     }
 
     track_script {
