--- a/keepalived+nginx/nginx-slave/keepalived-slave.conf
+++ b/keepalived+nginx/nginx-slave/keepalived-slave.conf
@@ -9,20 +9,20 @@ vrrp_instance VI_1 {
     virtual_router_id 33
     priority 99
     advert_int 1
-    unicast_src_ip 172.20.128.3
+    unicast_src_ip 172.30.128.3
     unicast_peer {
-        172.20.128.2
+        172.30.128.2
     }
     
     authentication {
         auth_type PASS
-        auth_pass huangt123456
+        auth_pass letmein
     }
     
     virtual_ipaddress {
-        172.20.128.4/24 dev eth0
+        172.30.128.4/24 dev eth0
     }
-    
+
     track_script {
         chk_nginx
     }
