--- a/mongodb/docker-compose.yml
+++ b/mongodb/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   mongodb01:
-    image: mongo
+    image: mongo:4.4-rc-focal
     restart: always
     container_name: mongo01
     volumes:
@@ -24,7 +24,7 @@ services:
         chown 999:999 /data/mongodb.key
         exec docker-entrypoint.sh  $$@
   mongodb02:
-    image: mongo
+    image: mongo:4.4-rc-focal
     restart: always
     container_name: mongo02
     volumes:
@@ -46,7 +46,7 @@ services:
         chown 999:999 /data/mongodb.key
         exec docker-entrypoint.sh  $$@
   mongodb03:
-    image: mongo
+    image: mongo:4.4-rc-focal
     restart: always
     container_name: mongo03
     volumes:
